fix: header icons alignment on tablet

--- a/styles/header.scss
+++ b/styles/header.scss
@@ -38,3 +38,13 @@
         }
     }
 }
+
+@media only screen and (min-width: 600px) {
+    .header {
+        .icon {
+            &--profile {
+                right: 14%;
+            }
+        }
+    }
+}
